(library
 (name slug)
 (public_name slug)
 (modules (:standard \ "data_generate"))
 (inline_tests)
 (preprocess (pps ppx_inline_test))
 (libraries yojson uunf.string uuseg.string re))


(executable 
 (name data_generate)
 (modules "data_generate")
 (libraries yojson))

(rule
 (targets slug_data.ml)
 (deps data/charmap.json data/locales.json)
 (action (run ./data_generate.exe)))

(rule
 (alias slug)
 (deps (universe) data/charmap.json data/locales.json)
 (action (run ./download.sh)))
